为首页头部添加了欢迎词

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <title>Document</title>
 </head>
 <body>
-	<header></header>
+	<header>欢迎访问学子商城</header>
 	<section></section>
 	<footer></footer>
 </body>
